--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
                         <h2>Coupon Code</h2>
                         <p>Please select a coupon code</p>
                         <select class="form-control" id="code-value">
-                            <option value="0989">$10 off $50 (Aug 2018)</option>
-                            <option value="0978">$20 off $100 (Aug 2018)</option>
-                            <option value="0922">10% off (Aug 2018)</option>
+                            <option value="0993">$10 off $50 (Aug 2018)</option>
+                            <option value="1140">$20 off $100 (Aug 2018)</option>
+                            <option value="0619">10% off (Aug 2018)</option>
                         </select>
-                        <p>Or enter it <a href="https://slickdeals.net/f/9549456-lowe-s-10-15-50-off-online-coupons-sharing-only-no-off-topic#post93883968">manually</a></p>
+                        <p>Or enter it <a href="https://slickdeals.net/f/12040323-we-had-to-remove-a-lowe-s-thread-today">manually</a></p>
                         <p><input class="form-control" id="custom-value"/></p>
                         <p><a class="btn btn-primary" href="#" role="button" id="generate-coupon">Generate Coupon</a></p>
                     </div>
