Add support for changing prefix

--- a/index.html
+++ b/index.html
@@ -26,14 +26,10 @@
                 <div class="row">
                     <div class="col-md-4">
                         <h2>Coupon Code</h2>
-                        <p>Please select a coupon code</p>
-                        <select class="form-control" id="code-value">
-                            <option value="0993">$10 off $50 (Oct 2018)</option>
-                            <option value="1140">$20 off $100 (Oct 2018)</option>
-                            <option value="0619">10% off (Oct 2018)</option>
-                        </select>
-                        <p>Or enter it <a href="https://slickdeals.net/f/12040323-we-had-to-remove-a-lowe-s-thread-today">manually</a></p>
-                        <p><input class="form-control" id="custom-value"/></p>
+                        <p>Prefix</p>
+                        <p><input class="form-control" id="prefix" value="47176" /></p>
+                        <p><a href="https://slickdeals.net/f/12040323-we-had-to-remove-a-lowe-s-thread-today#post120348826">Code</a></p>
+                        <p><input class="form-control" id="custom-value" value="2343" /></p>
                         <p><a class="btn btn-primary" href="#" role="button" id="generate-coupon">Generate Coupon</a></p>
                     </div>
                     <div class="col-md-8">
