Display old codes and copy the latest

--- a/index.html
+++ b/index.html
@@ -38,9 +38,18 @@
                     </div>
                 </div>
 
-                <hr>
+                <hr />
+
+                <div class="row">
+                    <div id="old-codes">
+                        <h2>Codes</h2>
+                    </div>
+                </div>
+
+                <hr/>
 
             </div> <!-- /container -->
+
 
         </main>
 
